@@ -16,32 +16,6 @@ comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more
 end_comment
 begin_import
 import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
-name|Constants
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|util
-operator|.
-name|IOUtils
-import|;
-end_import
-begin_import
-import|import
 name|java
 operator|.
 name|io
@@ -135,25 +109,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|HashSet
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|List
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Set
 import|;
 end_import
 begin_import
@@ -168,14 +124,29 @@ name|Future
 import|;
 end_import
 begin_import
-import|import static
-name|java
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
 operator|.
 name|util
 operator|.
-name|Collections
+name|Constants
+import|;
+end_import
+begin_import
+import|import
+name|org
 operator|.
-name|synchronizedSet
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|IOUtils
 import|;
 end_import
 begin_comment
@@ -197,26 +168,6 @@ name|Path
 name|directory
 decl_stmt|;
 comment|// The underlying filesystem directory
-DECL|field|staleFiles
-specifier|protected
-specifier|final
-name|Set
-argument_list|<
-name|String
-argument_list|>
-name|staleFiles
-init|=
-name|synchronizedSet
-argument_list|(
-operator|new
-name|HashSet
-argument_list|<
-name|String
-argument_list|>
-argument_list|()
-argument_list|)
-decl_stmt|;
-comment|// Files written, but not yet sync'ed
 comment|/** Create a new FSDirectory for the named location (ctor for subclasses).    * @param path the path of the directory    * @param lockFactory the lock factory to use, or null for the default    * ({@link NativeFSLockFactory});    * @throws IOException if there is a low-level I/O error    */
 DECL|method|FSDirectory
 specifier|protected
@@ -541,13 +492,6 @@ name|name
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|staleFiles
-operator|.
-name|remove
-argument_list|(
-name|name
-argument_list|)
-expr_stmt|;
 block|}
 comment|/** Creates an IndexOutput for the file with the given name. */
 annotation|@
@@ -607,24 +551,6 @@ argument_list|)
 expr_stmt|;
 comment|// delete existing, if any
 block|}
-comment|/**    * Sub classes should call this method on closing an open {@link IndexOutput}, reporting the name of the file    * that was closed. {@code FSDirectory} needs this information to take care of syncing stale files.    */
-DECL|method|onIndexOutputClosed
-specifier|protected
-name|void
-name|onIndexOutputClosed
-parameter_list|(
-name|String
-name|name
-parameter_list|)
-block|{
-name|staleFiles
-operator|.
-name|add
-argument_list|(
-name|name
-argument_list|)
-expr_stmt|;
-block|}
 annotation|@
 name|Override
 DECL|method|sync
@@ -644,32 +570,12 @@ block|{
 name|ensureOpen
 argument_list|()
 expr_stmt|;
-name|Set
-argument_list|<
-name|String
-argument_list|>
-name|toSync
-init|=
-operator|new
-name|HashSet
-argument_list|<>
-argument_list|(
-name|names
-argument_list|)
-decl_stmt|;
-name|toSync
-operator|.
-name|retainAll
-argument_list|(
-name|staleFiles
-argument_list|)
-expr_stmt|;
 for|for
 control|(
 name|String
 name|name
 range|:
-name|toSync
+name|names
 control|)
 block|{
 name|fsync
@@ -678,13 +584,6 @@ name|name
 argument_list|)
 expr_stmt|;
 block|}
-name|staleFiles
-operator|.
-name|removeAll
-argument_list|(
-name|toSync
-argument_list|)
-expr_stmt|;
 block|}
 annotation|@
 name|Override
@@ -812,12 +711,6 @@ name|CHUNK_SIZE
 init|=
 literal|8192
 decl_stmt|;
-DECL|field|name
-specifier|private
-specifier|final
-name|String
-name|name
-decl_stmt|;
 DECL|method|FSIndexOutput
 specifier|public
 name|FSIndexOutput
@@ -923,39 +816,6 @@ argument_list|,
 name|CHUNK_SIZE
 argument_list|)
 expr_stmt|;
-name|this
-operator|.
-name|name
-operator|=
-name|name
-expr_stmt|;
-block|}
-annotation|@
-name|Override
-DECL|method|close
-specifier|public
-name|void
-name|close
-parameter_list|()
-throws|throws
-name|IOException
-block|{
-try|try
-block|{
-name|onIndexOutputClosed
-argument_list|(
-name|name
-argument_list|)
-expr_stmt|;
-block|}
-finally|finally
-block|{
-name|super
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
 block|}
 block|}
 DECL|method|fsync
